--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,16 +10,18 @@ jobs:
     name: Bundle Job
     runs-on: ubuntu-latest
     steps:
-      - name: Setup NPM Cache
+      - name: Checkout Code
         uses: actions/checkout@v4
-      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: 'npm'
+      - name: Install Dependencies
+        run: npm ci
+      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Install Redocly
-        run: npm ci @redocly/cli@latest
+        run: npm ci
       - run: redocly bundle openapi/openapi.json --output dist/openapi.json
